--- a/Vehicle Value Analysis2.ipynb
+++ b/Vehicle Value Analysis2.ipynb
@@ -827,7 +827,7 @@
     "# You can replace 'merged_df' with the name of your DataFrame\n",
     "\n",
     "# Filter for rows where 'lat' is missing\n",
-    "missing_lat_locations = merged_df[merged_df['lat'].isnull()]\n",
+    "missing_lat_locations = car_details_df[ar_details_df['lat'].isnull()]\n",
     "\n",
     "# Extract unique locations from the filtered DataFrame\n",
     "unique_missing_lat_locations = missing_lat_locations['Location'].unique()\n",
